Only track activity of master branch
Signed-off-by: Sebastian Hoß <mail@shoss.de>

--- a/README.textile
+++ b/README.textile
@@ -1,4 +1,4 @@
-h1. math-clj "!https://travis-ci.org/sebhoss/math-clj.png!":https://travis-ci.org/sebhoss/math-clj "!https://www.ohloh.net/p/math-clj/widgets/project_thin_badge.gif!":https://www.ohloh.net/p/math-clj/
+h1. math-clj "!https://travis-ci.org/sebhoss/math-clj.png?branch=master!":https://travis-ci.org/sebhoss/math-clj "!https://www.ohloh.net/p/math-clj/widgets/project_thin_badge.gif!":https://www.ohloh.net/p/math-clj/
 
 p. Common math functions for Clojure-based projects.
 
